# CloudOSS

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
asserts/: icons.qrc
docs/: api.md
images/: icons.qrc
src/cpp/: main.cpp
src/cpp/common/: AwsS3Client.cpp  AwsS3Client.h  ConfigManager.cpp  ConfigManager.h  HttpClient.cpp  HttpClient.h  Logger.h  UserManager.h
src/cpp/services/: AuthService.cpp  AuthService.h
src/qml/: Main.qml
src/qml/components/: DanmuToast.qml  LoginCard.qml  ToastService.qml
src/qml/pages/: LoginPage.qml  RegisterPage.qml
